[package]
name = "rust_axum_tutorial_yt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio ={ version = "1", features = ["full"]}
serde ={ version = "1", features = ["derive"]}
serde_json ="1"
axum = "0.7.4"
pluralizer = "0.4.0"
tower-http = {version = "0.5.1", features = ["fs"]}
[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.1"
# Uses reqwest and cookie